--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "myapp",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.16.1"
+    },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +14,7 @@
     "react-scripts": "4.0.3",
     "unsplash-js": "6.0.0",
     "web-vitals": "^1.0.1"
+    
   },
   "scripts": {
     "start": "react-scripts start",
