--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "engines": {
     "node": "14.16.1"
-    },
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,9 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "unsplash-js": "6.0.0",
+    "unsplash-js": "^6.0.0",
     "web-vitals": "^1.0.1"
-    
   },
   "scripts": {
     "start": "react-scripts start",
